* Temporarily use the private I/O request API to decide whether or not the   request is a write request. * This closes bug #2579, thanks BGA for the investigation!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@26958 a95241bf-73f2-0310-859d-f6bbb57e9c96